[tool.poetry]
name = "ppp-connectors"
packages = [{ include = "ppp_connectors" }]
version = "0.5.1"
description = "A simple, lightweight set of connectors and functions to various APIs and DBMSs, controlled by a central broker."
authors = [
    "Rob D'Aveta <rob.daveta@gmail.com>",
    "Aaron Buchanan <aaronbuchanan@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pymongo = "^4.13.2"
elasticsearch = "^9.0.2"
splunk-sdk = "^2.1.0"
pyodbc = "^5.2.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
